--- a/03_setup_k8s_platform/tasks/apim-stack/apim-config/gravitee_5_orion_api.yml
+++ b/03_setup_k8s_platform/tasks/apim-stack/apim-config/gravitee_5_orion_api.yml
@@ -14,7 +14,7 @@
           "endpoints": [
             {
               "name":"default",
-              "target":"http://orion.{{ k8s_namespace }}.svc.cluster.local:9200",
+              "target":"http://orion.{{ K8S_NAMESPACE_CONTEXT_MANAGEMENT_STACK }}.svc.cluster.local:9200",
               "inherit":true
             }
           ],
