--- a/03_setup_k8s_platform/deploy_apim_stack.yml
+++ b/03_setup_k8s_platform/deploy_apim_stack.yml
@@ -5,6 +5,9 @@
   hosts: localhost
   gather_facts: false
 
+  vars_files:
+    - vars/default.yml
+
   tasks:
     - name: Read default values
       ansible.builtin.include_vars:
