--- a/03_setup_k8s_platform/full_install.yml
+++ b/03_setup_k8s_platform/full_install.yml
@@ -14,5 +14,5 @@
 - import_playbook: deploy_minio_tenant.yml
 - import_playbook: deploy_timescale.yml
 - import_playbook: deploy_context_management_stack.yml
-
+- import_playbook: deploy_apim_stack.yml
 
