--- a/03_setup_k8s_platform/tasks/apim-stack/apim-config/gravitee_0_retrieve_client_secrets.yml
+++ b/03_setup_k8s_platform/tasks/apim-stack/apim-config/gravitee_0_retrieve_client_secrets.yml
@@ -51,13 +51,13 @@
   set_fact:
     client_id_api_access: "{{ clients.json | json_query(query) }}"
   vars:
-    query: "[?clientId== '{{ keycloak.IDM_CLIENT_API_ACCESS }}'].id | [0]"
+    query: "[?clientId== '{{ IDM_CLIENT_API_ACCESS }}'].id | [0]"
 
 - name: "Get keycloak client Gravitee ID."
   set_fact:
     client_id_gravitee: "{{ clients.json | json_query(query) }}"
   vars:
-    query: "[?clientId== '{{ keycloak.IDM_CLIENT_GRAVITEE }}'].id | [0]"
+    query: "[?clientId== '{{ IDM_CLIENT_GRAVITEE }}'].id | [0]"
 
 - name: Get Client Secret API Access
   uri:
