--- a/02_setup_k8s/vars/default.yml
+++ b/02_setup_k8s/vars/default.yml
@@ -3,7 +3,7 @@
 
 # SSH-Key of user 'acn'
 copy_local_key: "{{ FUTR_HUB_ACN_SSHKEY_PATH }}/{{ FUTR_HUB_ACN_SSHKEY }}"
-copy_local_pub_key: "{{ lookup('file', {{ FUTR_HUB_ACN_SSHKEY_PATH }} + '/' + {{ FUTR_HUB_ACN_SSHKEY }} + '.pub') }}"
+copy_local_pub_key: "{{ lookup('file', lookup('env','HOME') + '/' + FUTR_HUB_ACN_SSHKEY_PATH + '/' + FUTR_HUB_ACN_SSHKEY  + '.pub') }}"
 
 # Necessary System packages we need to intall
 sys_packages: [ 'curl', 'vim', 'snapd', 'python3', 'python3-pip', 'ufw', 'htop', 'snap']
@@ -11,3 +11,8 @@ sys_packages: [ 'curl', 'vim', 'snapd', 'python3', 'python3-pip', 'ufw', 'htop',
 # Set K8s kubeconfig
 proxy_env:
   K8S_AUTH_KUBECONFIG: "{{ lookup('env','HOME') }}/.kube/{{ kubeconfig_file }}"
+
+# Namespace
+cert_manager_namespace: "cert-manager"
+
+k8s_ingress_class: public
