--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/http-configmap.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/http-configmap.yaml
@@ -9,11 +9,12 @@ data:
     server {
       listen {{ .Values.qgis.http.ports.servicePort }};
       server_name {{ .Values.nginx.server_name }};
-      location / {
-        root  /usr/share/nginx/html;
-        index index.html index.htm;
+
+      location /ogc/ {
+        rewrite ^/ogc/(.*)$ /qgis/qgis_mapserv.fcgi?map=/data/qgis/$1/project.qgs;
       }
-      location /qgis-server {
+
+      location /qgis {
         proxy_buffers 16 16k;
         proxy_buffer_size 16k;
         gzip off;
