Issue #113: added variables for CKAN deployment into inventory and updated vars/ckan_ckan.yml accordingly.

--- a/03_setup_k8s_platform/vars/ckan_ckan.yml
+++ b/03_setup_k8s_platform/vars/ckan_ckan.yml
@@ -35,9 +35,9 @@ DatastoreRODBPass: "{{ CKAN_DATASTORE_RWDB_USER_PASSWORD }}"
 ckan_sysadminName: "{{ CKAN_SYSADMIN_NAME }}"
 ckan_sysadminPassword: "{{ CKAN_SYSADMIN_PASSWORD }}"
 ckan_sysadminApiToken: "{{ CKAN_SYSADMIN_APITOKEN }}"
-ckan_sysadminEmail: "postmaster@domain.com"
-ckan_siteTitle: "CKAN for FUTR-HUB"
-ckan_siteId: "futr-hub"
+ckan_sysadminEmail: "{{ CKAN_SYSADMIN_EMAIL }}"
+ckan_siteTitle: "{{ CKAN_SITE_TITLE }}"
+ckan_siteId: "{{ CKAN_SITE_ID }}"
 ckan_siteUrl: "https://ckan.{{ DOMAIN }}"
 ckan_ckanPlugins: "envvars image_view text_view recline_view datastore datapusher"
 ckan_storagePath: "/var/lib/ckan/default"
