Issue #113: files `vars/webgis_postgis.yml` and `vars/webgis_qgisserver.yml` now use values defined in file `inventory`.

--- a/03_setup_k8s_platform/vars/webgis_postgis.yml
+++ b/03_setup_k8s_platform/vars/webgis_postgis.yml
@@ -21,5 +21,5 @@ persistentVolume_size: 100Mi
 persistentVolume_storageClass: microk8s-hostpath
 persistentVolume_existingClaim:
 
-env_postgres_user: "{{ env_postgres_user }}"
-env_postgres_password: "{{ env_postgres_password }}"
+env_postgres_user: "{{ WEBGIS_POSTGRES_ADMIN }}"
+env_postgres_password: "{{ WEBGIS_POSTGRES_ADMIN_PASSWORD }}"
