Issue #116: set ENV variable PGSERVICEFILE within Nginx config. This allows QGIS Server to access the PostgreSQL database, defined in the file which PGSERVICEFILE points to.

--- a/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/http-configmap.yaml
+++ b/03_setup_k8s_platform/files/helmcharts/webgis-qgisserver/templates/http-configmap.yaml
@@ -20,6 +20,7 @@ data:
         gzip off;
         include fastcgi_params;
         fastcgi_pass {{ $fullName }}:{{ .Values.qgis.server.ports.servicePort }};
+        fastcgi_param PGSERVICEFILE {{ .Values.qgis.pgservicefile_dir}}/{{ .Values.qgis.pgservicefile}};
 
         if ($request_method = 'OPTIONS') {
           add_header 'Access-Control-Allow-Origin' '{{ .Values.nginx.cors_origin }}';
