--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,7 @@ deploy_ansible_staging:
     - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
     - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
     - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 03_setup_k8s_platform/full_install.yml
+    when: manual
 
   stage: staging
   environment:
@@ -88,7 +89,7 @@ deploy_ansible_staging:
     paths:
       - .facts/
     expire_in: never
-    when: manual
+    when: on_success
 
 # deploy for staging
 test_serverscript_staging:
