--- a/02_setup_k8s/tasks/02_prepare_system.yml
+++ b/02_setup_k8s/tasks/02_prepare_system.yml
@@ -3,6 +3,8 @@
 # Update Repositories
 - name: Update apt cache
   raw: apt-get -y update
+  register: aptoutput
+  changed_when: aptoutput.rc != 0
 
 # Install Dependencies
 - name: Install required system packages
@@ -87,3 +89,5 @@
 # Disable Swap
 - name: Disable Swap
   command: swapoff -a
+  register: disableswap
+  changed_when: disableswap.rc != 0
