--- a/03_setup_k8s_platform/update_qgis_project_playbook.yml
+++ b/03_setup_k8s_platform/update_qgis_project_playbook.yml
@@ -69,7 +69,7 @@
     # - create /home/qgis/.pg_service.conf in Pod running QGIS Server component server.
     # - restart the Pod running QGIS Server component http.
     - name: Wait till new QGIS Server Pod is up and running
-      community.kubernetes.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
@@ -83,7 +83,7 @@
         wait_timeout: 360
 
     - name: Get Pod running QGIS Server component http
-      community.kubernetes.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
@@ -100,7 +100,7 @@
       when: qgis_server_http_pod_info is defined
 
     - name: Get Pod running QGIS Server component server
-      community.kubernetes.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
@@ -141,7 +141,7 @@
     #     minutes: 1
 
     - name: Wait till the new Pod, running QGIS Server component http, is up and running
-      community.kubernetes.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
