--- a/03_setup_k8s_platform/tasks/context_management-stack/install_quantumleap.yml
+++ b/03_setup_k8s_platform/tasks/context_management-stack/install_quantumleap.yml
@@ -14,7 +14,7 @@
     - quantumleap.timescale_namespace is defined
 
 - name: Check if TimescaleDB internal endpoint exists
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ quantumleap.timescale_namespace }}"
@@ -28,7 +28,7 @@
   when: timescale_endpoint_exists['resources'][0] is undefined
 
 - name: Check if QuantumLeap credentials exists in the cluster
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ quantumleap.timescale_namespace }}"
@@ -50,7 +50,7 @@
   no_log: true
 
 - name: Check if TimescaleDB superuser credentials exists in the cluster
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ quantumleap.timescale_namespace }}"
@@ -82,7 +82,7 @@
     - "{{ lookup('template', 'templates/context_management-stack/quantumleap.yml') | from_yaml_all | list }}"
 
 - name: Wait till deployment of QuantumLeap is completed
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ k8s_namespace }}"
