--- a/03_setup_k8s_platform/tasks/dataflow-stack/09_paxcounter.yml
+++ b/03_setup_k8s_platform/tasks/dataflow-stack/09_paxcounter.yml
@@ -37,7 +37,7 @@
     values: "{{ lookup('template', 'templates/dataflow-stack/dataflow_nodered_values.yaml.j2') | from_yaml }}"
 
 - name: "Get Pod running {{ helm_release_name }}"
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ k8s_namespace }}"
@@ -52,7 +52,7 @@
   when: nodered_pod_info is defined
 
 - name: "Get infos about PVC {{ nodered_pvc }}"
-  community.kubernetes.k8s_info:
+  k8s_info:
     kubeconfig: "{{ k8s_config }}"
     context: "{{ k8s_context }}"
     namespace: "{{ k8s_namespace }}"
