--- a/03_setup_k8s_platform/tasks/idm-stack/install_openldap.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/install_openldap.yml
@@ -170,7 +170,7 @@
 - name: Setup OpenLDAP in KeyCloak
   block:
     - name: Get Admin credentials
-      community.kubernetes.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         kind: Secret
         namespace: "{{ k8s_namespace }}"
