--- a/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
@@ -46,7 +46,7 @@
         qgisserver_project_file: "{{ qgisserver.env_QGIS_PROJECT_FILE }}"
 
     - name: Check for Secret gitlab-registry in Namespace "{{ k8s_namespace }}"
-      kubernetes.core.k8s_info:
+      k8s_info:
         api_version: v1
         kind: Secret
         name: "gitlab-registry"
