--- a/03_setup_k8s_platform/update_masterportal_playbook.yml
+++ b/03_setup_k8s_platform/update_masterportal_playbook.yml
@@ -24,7 +24,7 @@
         kubectl_pid_file: "/tmp/kubectl_pid"
 
     - name: Check for Secret gitlab-registry in Namespace "{{ k8s_namespace }}"
-      kubernetes.core.k8s_info:
+      k8s_info:
         api_version: v1
         kind: Secret
         name: "gitlab-registry"
@@ -34,7 +34,7 @@
       register: gitlab_registry_secret
 
     - name: Get deployment info of MasterPortal
-      kubernetes.core.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
