--- a/03_setup_k8s_platform/update_qgis_project_playbook.yml
+++ b/03_setup_k8s_platform/update_qgis_project_playbook.yml
@@ -28,7 +28,7 @@
         qgisserver_project_file: "{{ qgisserver.env_QGIS_PROJECT_FILE }}"
 
     - name: Check for Secret gitlab-registry in Namespace "{{ k8s_namespace }}"
-      kubernetes.core.k8s_info:
+      k8s_info:
         api_version: v1
         kind: Secret
         name: "gitlab-registry"
@@ -38,7 +38,7 @@
       register: gitlab_registry_secret
 
     - name: Get deployment info of QGIS Server
-      kubernetes.core.k8s_info:
+      k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
