--- a/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
@@ -71,7 +71,7 @@
       when: docker_registry is defined
 
     - name: Create docker-registry secret for GitLab registry
-      kubernetes.core.k8s:
+      .k8s:
         state: present
         namespace: "{{ k8s_namespace }}"
         kubeconfig: "{{ k8s_config }}"
@@ -165,7 +165,7 @@
       - always
 
     - name: Install Helm package with values loaded from template
-      kubernetes.core.helm:
+      .helm:
         name: "{{ qgisserver_helm_release_name }}"
         # chart_ref: "{{ helm_repo_name }}/{{ qgisserver_helm_chart_name }}"
         chart_ref: "files/helmcharts/{{ qgisserver_helm_chart_name }}"
