--- a/03_setup_k8s_platform/tasks/idm-stack/install_openldap.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/install_openldap.yml
@@ -185,7 +185,7 @@
 
     - name: Set OpenLDAP URL
       ansible.builtin.set_fact:
-        OPENLDAP_URL: "ldap://openldap.{{ k8s_namespace }}.svc.cluster.local:1389"
+        openldap_url: "ldap://openldap.{{ k8s_namespace }}.svc.cluster.local:1389"
 
     - name: Re-Login to KeyCloak
       ansible.builtin.uri:
