Fixed invalid value for `nginx_cors_origin`.

--- a/03_setup_k8s_platform/vars/webgis_qgisserver.yml
+++ b/03_setup_k8s_platform/vars/webgis_qgisserver.yml
@@ -12,7 +12,7 @@ qgis_data_dir: "/data/qgis"
 nginx_default_conf: "/etc/nginx/conf.d/"
 nginx_qgis_conf: "qgis-nginx.conf"
 nginx_server_name: "mapserver.{{ DOMAIN }}"
-nginx_cors_origin: "*.{{ DOMAIN }}"
+nginx_cors_origin: "https://masterportal.{{ DOMAIN }}"
 
 # QGIS Server
 server_replicaCount: 1
