Fix Integration Issues

--- a/03_setup_k8s_platform/vars/webgis_pgadmin.yml
+++ b/03_setup_k8s_platform/vars/webgis_pgadmin.yml
@@ -23,7 +23,7 @@ serverDefinitions_Port: 5432
 serverDefintions_Username: "{{ MAPSERVER_POSTGIS_USER }}"
 serverDefintions_Host: "{{ MAPSERVER_POSTGIS_HOST }}"
 serverDefinitions_SSLMode: prefer
-serverDefinitions_MaintenanceDB: "{{ serverDefinitions_MaintenanceDB }}"
+serverDefinitions_MaintenanceDB: "{{ MAPSERVER_POSTGIS_DB }}"
 
 networkPolicy_enabled: true
 
