--- a/03_setup_k8s_platform/deploy_webgis_pgadmin_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_pgadmin_playbook.yml
@@ -4,6 +4,9 @@
   hosts: localhost
   gather_facts: false
 
+  vars_files:
+    - vars/default.yml
+
   tasks:
     - name: Read default values
       ansible.builtin.include_vars:
@@ -21,14 +24,14 @@
         k8s_context: "{{ default.K8S_CONTEXT }}"
         k8s_namespace: "{{ default.K8S_NAMESPACE_GEODATA }}"
 
-    - name: Set facts for ChartMuseum
-      ansible.builtin.set_fact:
-        cm_port: "{{ default.CM_PORT }}"
-        cm_storage: "{{ default.CM_STORAGE }}"
-        cm_storage_local_rootdir: "{{ default.CM_STORAGE_LOCAL_ROOTDIR }}"
-        cm_context_path: "{{ default.CM_CONTEXT_PATH }}"
-        helm_repo_url: "{{ default.HELM_REPO_URL }}"
-        helm_repo_name: "{{ default.HELM_REPO_NAME }}"
+    # - name: Set facts for ChartMuseum
+    #   ansible.builtin.set_fact:
+    #     cm_port: "{{ default.CM_PORT }}"
+    #     cm_storage: "{{ default.CM_STORAGE }}"
+    #     cm_storage_local_rootdir: "{{ default.CM_STORAGE_LOCAL_ROOTDIR }}"
+    #     cm_context_path: "{{ default.CM_CONTEXT_PATH }}"
+    #     helm_repo_url: "{{ default.HELM_REPO_URL }}"
+    #     helm_repo_name: "{{ default.HELM_REPO_NAME }}"
 
     - name: Set facts for pgAdmin Helm chart
       ansible.builtin.set_fact:
