Revert "Merge branch 'issue-111' into 'ticket-113-branch'"
This reverts commit f1620dabe464193d04896b38afa2c10df6407569

--- a/02_setup_k8s/tasks/01_user_setup.yml
+++ b/02_setup_k8s/tasks/01_user_setup.yml
@@ -35,8 +35,7 @@
     msg: "Could not reach target host."
   when: "root_login.unreachable is defined and not ('Permission denied' in root_login.msg)"
 
-- name: "Debug root_login.unreachable"
-  debug:
+- debug:
     msg:
       - "Could not log in with root user. This is probably since you already configured the user 'acn'."
       - "If this is not the case, please check if root login is allowed on your target host and that the root password is correct."
