--- a/02_setup_k8s/tasks/02_prepare_system.yml
+++ b/02_setup_k8s/tasks/02_prepare_system.yml
@@ -3,8 +3,6 @@
 # Update Repositories
 - name: Update apt cache
   raw: apt-get -y update
-  register: aptoutput
-  changed_when: aptoutput.rc != 0
 
 # Install Dependencies
 - name: Install required system packages
@@ -13,7 +11,7 @@
 # Install required Python modules
 - name: Install required Python modules
   pip: name={{ item }}
-  loop: [ 'PyYAML', 'openshift==0.11.2', 'jmespath', 'docker', psycopg2-binary, 'kubernetes==11.0']
+  loop: [ 'PyYAML','openshift']
 
 # Configure ufw
 - name: Set logging
@@ -89,5 +87,3 @@
 # Disable Swap
 - name: Disable Swap
   command: swapoff -a
-  register: disableswap
-  changed_when: disableswap.rc != 0
