--- a/01_setup_acn/packer/files/galaxy-requirements.yml
+++ b/01_setup_acn/packer/files/galaxy-requirements.yml
@@ -2,7 +2,7 @@
 collections:
   - name: community.general
     version: 1.3.0
-  - name: 
+  - name: kubernetes.core
     version: 1.1.1
   - name: community.grafana
     version: 1.1.0
