--- a/03_setup_k8s_platform/deploy_frost_playbook.yml
+++ b/03_setup_k8s_platform/deploy_frost_playbook.yml
@@ -152,7 +152,7 @@
       changed_when: True
 
     - name: Get password of user sensorthings, created by Zalando operator
-      k8s_info:
+      community.kubernetes.k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
@@ -178,7 +178,7 @@
         apply: yes
 
     - name: Get Pod running FROST Server component http
-      k8s_info:
+      community.kubernetes.k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
