--- a/03_setup_k8s_platform/deploy_minio_tenant.yml
+++ b/03_setup_k8s_platform/deploy_minio_tenant.yml
@@ -29,7 +29,7 @@
         state: present
         namespace: "{{ k8s_namespace }}"
         kubeconfig: "{{ k8s_config }}"
-        context: "{{ k8s_context }}"
+        context: "{{ k8s_context }}" 
         definition:
           apiVersion: v1
           kind: Secret
@@ -49,7 +49,7 @@
         state: present
         namespace: "{{ k8s_namespace }}"
         kubeconfig: "{{ k8s_config }}"
-        context: "{{ k8s_context }}"
+        context: "{{ k8s_context }}"         
         definition:
           apiVersion: v1
           kind: Secret
@@ -73,7 +73,7 @@
         state: present
         namespace: "{{ k8s_namespace }}"
         kubeconfig: "{{ k8s_config }}"
-        context: "{{ k8s_context }}"
+        context: "{{ k8s_context }}"         
         definition:
           apiVersion: minio.min.io/v2
           kind: Tenant
@@ -96,8 +96,8 @@
 
           spec:
             ## Registry location and Tag to download MinIO Server image
-            image: "{{ minio.image_repository }}:{{ minio.image_tag }}"
-            imagePullPolicy: "{{ minio.image_pullPolicy }}"
+            image: "{{ minio.image_repository }}:{{ minio.image_tag }}" 
+            imagePullPolicy: "{{ minio.image_pullPolicy }}" 
 
             ## Secret with credentials to be used by MinIO Tenant.
             ## Refers to the secret object created above.
@@ -126,6 +126,7 @@
                     resources:
                       requests:
                         storage: 10Gi
+                    storageClassName: minio-storage
 
                 ## Used to specify a toleration for a pod
                 # tolerations:
