--- a/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
+++ b/03_setup_k8s_platform/deploy_webgis_qgisserver_playbook.yml
@@ -46,7 +46,7 @@
         qgisserver_project_file: "{{ qgisserver.env_QGIS_PROJECT_FILE }}"
 
     - name: Check for Secret gitlab-registry in Namespace "{{ k8s_namespace }}"
-      k8s_info:
+      kubernetes.core.k8s_info:
         api_version: v1
         kind: Secret
         name: "gitlab-registry"
@@ -71,7 +71,7 @@
       when: docker_registry is defined
 
     - name: Create docker-registry secret for GitLab registry
-      k8s:
+      kubernetes.core.k8s:
         state: present
         namespace: "{{ k8s_namespace }}"
         kubeconfig: "{{ k8s_config }}"
@@ -165,7 +165,7 @@
       - always
 
     - name: Install Helm package with values loaded from template
-      helm:
+      kubernetes.core.helm:
         name: "{{ qgisserver_helm_release_name }}"
         # chart_ref: "{{ helm_repo_name }}/{{ qgisserver_helm_chart_name }}"
         chart_ref: "files/helmcharts/{{ qgisserver_helm_chart_name }}"
@@ -177,7 +177,7 @@
         values: "{{ lookup('template', 'templates/webgis/qgisserver_values.yaml.j2') | from_yaml }}"
 
     - name: Get Pod running QGIS Server component http
-      k8s_info:
+      community.kubernetes.k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
@@ -194,7 +194,7 @@
       when: qgis_server_http_pod_info is defined
 
     - name: Get Pod running QGIS Server component server
-      k8s_info:
+      community.kubernetes.k8s_info:
         kubeconfig: "{{ k8s_config }}"
         context: "{{ k8s_context }}"
         namespace: "{{ k8s_namespace }}"
@@ -210,12 +210,10 @@
         qgis_server_server_pod_name: "{{ qgis_server_server_pod_info['resources'][0]['metadata']['name'] }}"
       when: qgis_server_server_pod_info is defined
 
-    - name: Debug qgis_server_http_pod_name
-      debug:
+    - debug:
         msg: "Name of HTTP Pod: {{ qgis_server_http_pod_name }}"
 
-    - name: Debug qgis_server_server_pod_name
-      debug:
+    - debug:
         msg: "Name of Server Pod: {{ qgis_server_server_pod_name }}"
 
     - name: Create /home/qgis/.pg_service.conf in Pod running QGIS Server component server
