--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,10 +74,10 @@ deploy_ansible_staging:
   script:
     - *ssh_config_staging
     - mv "$STAGING_INVENTORY_FULL" inventory
-    - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u root 02_setup_k8s/setup_k8s_playbook_01.yml
-    - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
-    - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
-    - ansible-playbook -i inventory -l $STAGING_TARGET_HOST -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 03_setup_k8s_platform/full_install.yml
+    - ansible-playbook -i inventory -l $STAGING_TARGET_HOSTNAME -u root 02_setup_k8s/setup_k8s_playbook_01.yml
+    - ansible-playbook -i inventory -l $STAGING_TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
+    - ansible-playbook -i inventory -l $STAGING_TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
+    - ansible-playbook -i inventory -l $STAGING_TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 03_setup_k8s_platform/full_install.yml
   when: manual
   stage: staging
   environment:
@@ -89,18 +89,18 @@ deploy_ansible_staging:
     when: on_success
 
 # deploy for staging
-test_serverscript_staging:
-  script:
-    - *ssh_config_staging
-    - 'which gem || ( apt-get update -y && apt-get install -y --no-install-recommends ruby )'
-    - gem install rspec serverspec
-    - cd 04_tests/serverspec
-    - TARGET_HOST=$TARGET_HOST_STAGING rake spec
-  stage: test
-  environment:
-    name: "Test Staging Env"
-  only:
-      - master
+# test_serverscript_staging:
+#   script:
+#     - *ssh_config_staging
+#     - 'which gem || ( apt-get update -y && apt-get install -y --no-install-recommends ruby )'
+#     - gem install rspec serverspec
+#     - cd 04_tests/serverspec
+#     - TARGET_HOST=$TARGET_HOST_STAGING rake spec
+#   stage: test
+#   environment:
+#     name: "Test Staging Env"
+#   only:
+#       - master
 
 ####################################
 ######     PRODUCTION    ###########
