--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
 inventory = inventory
+remote_user = pipeline_ssh_user
+private_key_file = /root/.ssh/id_rsa_sc_admin
 host_key_checking = False
 gathering = smart
 fact_caching = jsonfile
