--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@
 #
 
 stages:
+    #- verify
     - staging
-    - verify
     - prod
     - test
 
@@ -75,6 +75,7 @@ deploy_ansible_staging:
   script:
     - *ssh_config_staging
     - mv "$STAGING_INVENTORY_FULL" inventory
+    - cat /etc/ansible/hosts
     - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u root -vvvvv 02_setup_k8s/setup_k8s_playbook_01.yml
     - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
     - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
