--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ variables: &global-variables
     - echo "    PreferredAuthentications publickey" >> ~/.ssh/config
     - echo "    IdentityFile ~/.ssh/id_rsa_sc_admin" >> ~/.ssh/config
     - chmod 600 ~/.ssh/config
-    #- 'which sshpass || ( apt-get update -y && apt-get install sshpass -y )'
+    - cat /root/.ssh/config
 
 
 # deploy for staging
