--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
-remote_user = root
+remote_user = acn
 private_key_file = /root/.ssh/id_rsa_sc_admin
 host_key_checking = False
 gathering = smart
