--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ variables: &global-variables
     - touch ~/.ssh/config
     - echo "Host $STAGING_TARGET_HOST" >> ~/.ssh/config
     - echo "    HostName $STAGING_TARGET_HOST" >> ~/.ssh/config
-    - echo "    User pipeline_ssh_user" >> ~/.ssh/config
+    - echo "    User acn" >> ~/.ssh/config
     - echo "    PreferredAuthentications publickey" >> ~/.ssh/config
     - echo "    IdentityFile ~/.ssh/id_rsa_sc_admin" >> ~/.ssh/config
     - chmod 600 ~/.ssh/config
@@ -78,10 +78,10 @@ deploy_ansible_staging:
     - mv "$STAGING_INVENTORY_FULL" inventory
     - cat /etc/ansible/hosts
     - *ssh_config_staging
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u root -vvv 02_setup_k8s/setup_k8s_playbook_01.yml
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
-    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u pipeline_ssh_user --private-key ~/.ssh/id_rsa_sc_admin 03_setup_k8s_platform/full_install.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn -vvv 02_setup_k8s/setup_k8s_playbook_01.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_02.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn --private-key ~/.ssh/id_rsa_sc_admin 02_setup_k8s/setup_k8s_playbook_03.yml
+    - ansible-playbook -i inventory -l $TARGET_HOSTNAME -u acn --private-key ~/.ssh/id_rsa_sc_admin 03_setup_k8s_platform/full_install.yml
   when: manual
   stage: staging
   environment:
