--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_1_deploy_components.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_1_deploy_components.yml
@@ -1,3 +1,7 @@
+- name: Set initial keycloak deployment instances
+  set_fact:
+    keycloak_replicas: 1
+
 - name: Deploy Keycloak custom resource
   k8s:
     definition: "{{ item }}"
