--- a/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_1_deploy_components.yml
+++ b/03_setup_k8s_platform/tasks/idm-stack/idm-config/keycloak_1_deploy_components.yml
@@ -21,3 +21,7 @@
     state: present
   loop:
     - "{{ lookup('template', 'templates/keycloak/deployment/keycloak-ingress.yaml') | from_yaml }}"
+
+- name: Wait for Keylcoak Start-Up
+  wait_for:
+    timeout: 180
